# QProxyStyle-based-style

./: CMakeLists.txt  README.md
src/: QHelloStyle.cpp  QHelloStyle.h  hello.json
